--- a/package.json
+++ b/package.json
@@ -3,6 +3,18 @@
   "displayName": "Simple YARD Snippets",
   "description": "Speed up writing YARD comments.",
   "publisher": "MichalZaporski",
+  "icon": "images/icon.png",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/MichalZaporski/simple-yard-snippets"
+  },
+  "keywords": [
+    "ruby",
+    "yard",
+    "snippet",
+    "snippets",
+    "comments"
+  ],
   "version": "0.0.1",
   "engines": {
     "vscode": "^1.71.0"
